test/expected/regression-net-connect.txt
/scripts/regression-net-connect.js:12
  throw error;
  ^

Error: connect ECONNREFUSED 127.0.0.1:24075
    at Object.exports._errnoException (util.js:856:11)
    at exports._exceptionWithHostPort (util.js:879:20)
    at TCPConnectWrap.afterConnect [as oncomplete] (net.js:1064:14)
    at fireErrorCallbacks (net.js:445:15)
    at Socket._destroy (net.js:481:3)
    at TCPConnectWrap.afterConnect [as oncomplete] (net.js:1073:10)
    at connect (net.js:825:26)
    at net.js:987:7
    at GetAddrInfoReqWrap.asyncCallback [as callback] (dns.js:64:16)
    at GetAddrInfoReqWrap.onlookup [as oncomplete] (dns.js:83:10)
    at lookup (dns.js:166:19)
    at lookupAndConnect (net.js:968:3)
    at Socket.connect (net.js:907:5)
    at Object.exports.connect.exports.createConnection (net.js:64:35)
    at Object.<anonymous> (/scripts/regression-net-connect.js:10:20)
    at Module._compile (module.js:399:26)
    at Object.Module._extensions..js (module.js:406:10)
    at Module.load (module.js:345:32)
    at Function.Module._load (module.js:302:12)
    at Function.Module.runMain (module.js:431:10)
    at startup (node.js:141:18)
    at node.js:977:3
